--- a/public/style.css
+++ b/public/style.css
@@ -712,10 +712,20 @@ button:hover {
     padding: 40px;
     position: fixed;
     width: 60%;
-    height: 40%;
+    height: 400px;
     left: 50%;
     top: 50%;
     z-index: 100;
     transform: translate(-50%, -50%);
     filter: drop-shadow(5px 5px 5px #222);
+}
+
+.modal h2 {
+    border: 1px solid var(--bordo);
+    border-radius: 10px;
+    padding: 15px;
+    line-height: 110%;
+}
+.modal p {
+    cursor: pointer;
 }
