--- a/public/style.css
+++ b/public/style.css
@@ -280,26 +280,31 @@ button:hover {
     position: absolute;
     top: 10px;
     left: 10px;
-    transition: 0.6s;
-    /* backface-visibility: hidden; */
-    /* transform-style: preserve-3d;
-     */
+    transition: 600ms ease-out;
+    backface-visibility: hidden;
+    /* transform-style: preserve-3d; */
+    opacity: 1;
 }
 
 #frontSide {
     color: var(--deepGreen);
+    transform: rotateY(0deg) scale(1);
 }
 
 #backSide {
     color: var(--redBrown);
     /* border: 1px solid green; */
+    font-family: "Nunito", sans-serif;
     height: 418px;
     width: 300px;
     padding: 15px;
+
+    transform: rotateY(0deg) scale(1);
 }
 
 .flagHidden#frontSide,
 .flagHidden#backSide {
+    transform: rotateY(-180deg) scale(0.1) translateY(-30%);
     z-index: -1;
     opacity: 0;
 }
@@ -468,26 +473,27 @@ button:hover {
     color: var(--darkPurple);
 }
 
-.share {
-    display: flex;
-    /* align-content: center; */
-    border-radius: 30px;
-    background-color: var(--muteLime);
-
-    gap: 30px;
-    margin-top: 15px;
-    padding: 5px 20px;
-    font-size: 40px;
-    cursor: pointer;
-    transition: 300ms;
-}
-
-.share:hover {
-    transform: scale(1.1);
-}
-
 .wishlist-header h3 {
     padding: 50px 0 10px 0;
+}
+
+.share {
+    display: flex;
+    gap: 30px;
+    margin-top: 15px;
+    font-size: 30px;
+}
+
+.share > .fab,
+.share > .far {
+    cursor: pointer;
+    transition: 200ms;
+}
+
+.share > .fab:hover,
+.share > .far:hover {
+    transform: scale(1.1);
+    color: var(--redBrown);
 }
 
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ADVISOR ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
