--- a/public/style.css
+++ b/public/style.css
@@ -518,34 +518,38 @@ button:hover {
 }
 
 .advisor-container {
-    background-color: var(--lightPink);
+    /* background-color: var(--lightPink); */
     background-image: url("/advisor_bg.png");
-    height: 500px;
-    width: 1100px;
+    background-repeat: round;
+    min-height: 500px;
+    width: 80%;
     padding: 30px;
     border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-    filter: drop-shadow(4px 4px 4px #222);
-}
 
-.question-box {
-    /* border: 1px solid purple; */
-    display: flex;
-    height: 450px;
-    justify-content: space-between;
+    /* display: flex;
+    justify-content: space-between; */
+    /* flex-direction: column; */
+    filter: drop-shadow(4px 4px 4px #222);
+    /* overflow: auto; */
 }
 
 .advisor-left,
-.advisor-right,
-.advisor-middle {
+.advisor-right {
     /* border: 1px solid red; */
-    width: 45%;
+    /* width: 45%; */
     display: grid;
-    grid-template-rows: 3fr 3fr 1fr 3fr;
+    grid-template-rows: 1fr fit-content auto auto;
     justify-items: center;
     text-align: center;
 }
+/* 
+.advisor-left {
+    width: 30%;
+}
+
+.advisor-right {
+    width: 70%;
+} */
 
 .advisor-left h2,
 .advisor-right h2 {
@@ -557,6 +561,13 @@ button:hover {
     width: 100%;
     align-items: center;
     padding: 20px 40px 0px 40px;
+    min-height: 440px;
+    /* display: flex; */
+    /* flex-direction: column; */
+    display: grid;
+    grid-template-rows: 50px auto 100px 60px;
+    justify-items: center;
+    text-align: center;
 }
 
 .advisor-middle h1 {
@@ -570,7 +581,7 @@ button:hover {
 
 .location-container {
     /* border: 1px solid green; */
-    margin-top: 80px;
+    /* margin-top: 80px; */
     display: flex;
     gap: 20px;
     align-items: center;
@@ -594,19 +605,33 @@ button:hover {
     font-size: 90px;
 }
 
+.question-box {
+    min-height: 440px;
+    display: grid;
+    grid-template-columns: 4fr 6fr;
+    gap: 70px;
+}
+
 .advisor-icons-container {
     /* border: 1px solid green; */
     width: 100%;
     font-size: 12px;
     display: flex;
-    justify-content: space-around;
+    /* justify-content: space-around; */
+    justify-content: center;
     align-items: flex-end;
+    gap: 50px;
+}
+
+.multiple {
+    flex-wrap: wrap;
+    gap: 20px;
 }
 
 .advisor-left .advisor-icons-container {
     padding-left: 20px;
-    justify-content: flex-start;
-    gap: 70px;
+    /* justify-content: flex-start; */
+    /* gap: 70px; */
 }
 
 .advisor-btn-container.results {
@@ -655,7 +680,7 @@ button:hover {
         brightness(95%) contrast(93%);
 }
 
-.question-box .far {
+.advisor-container .far {
     font-size: 35px;
     opacity: 0.3;
     cursor: pointer;
@@ -663,7 +688,7 @@ button:hover {
     margin-top: 20px;
 }
 
-.question-box .far:hover {
+.advisor-container .far:hover {
     opacity: 1;
     transform: scale(1.1);
 }
