--- a/public/style.css
+++ b/public/style.css
@@ -222,7 +222,7 @@ button:hover {
     transform-style: preserve-3d;
     transform: rotateY(0deg) scale(1);
 
-    transition: transform 600ms ease-out, filter 200ms ease-in-out;
+    transition: transform 300ms ease-in-out, filter 200ms ease-in-out;
 }
 
 #plant-card:hover {
@@ -294,10 +294,10 @@ button:hover {
     position: absolute;
     top: 10px;
     left: 10px;
-    transition: 600ms ease-out;
-    backface-visibility: hidden;
+    transition: 300ms ease-out;
+    /* backface-visibility: hidden;
     transform-style: preserve-3d;
-    transform: rotateY(0deg) scale(1);
+    transform: rotateY(0deg) scale(1); */
     opacity: 1;
 }
 
@@ -316,7 +316,7 @@ button:hover {
 
 .flagHidden#frontSide,
 .flagHidden#backSide {
-    transform: rotateY(-180deg) scale(1) translateY(0%);
+    /* transform: rotateY(-180deg) scale(1) translateY(0%); */
     z-index: -1;
     opacity: 0;
 }
