--- a/public/style.css
+++ b/public/style.css
@@ -47,8 +47,8 @@ a {
     height: 200px;
     width: 100%;
     display: flex;
-    overflow: hidden;
-    justify-content: center;
+    /* overflow: hidden; */
+    /* justify-content: center; */
 }
 
 .logo {
@@ -77,6 +77,9 @@ a {
     gap: 20px;
     z-index: 8;
     filter: drop-shadow(-5px 1px 3px #222);
+}
+nav p {
+    cursor: pointer;
 }
 
 .navWishlist {
@@ -760,7 +763,7 @@ button:hover {
     padding: 40px;
     position: fixed;
     width: 60%;
-    height: 400px;
+    height: fit-content;
     left: 50%;
     top: 50%;
     z-index: 100;
@@ -776,4 +779,12 @@ button:hover {
 }
 .modal p {
     cursor: pointer;
+}
+
+/* //////////// media queries ///////////// */
+@media screen and (max-width: 1100px) {
+    .logo {
+        height: 50px;
+        top: 40px;
+    }
 }
